# swagger.json
@@ -1027,6 +1027,10 @@
           "303": {
             "description": "Redirect to OpenID Connect identity provider",
             "content": { }
+          },
+          "404": {
+            "description": "OpenID Connect disabled",
+            "content": { }
           }
         }
       }
@@ -1043,11 +1047,19 @@
         ],
         "responses": {
           "303": {
-            "description": "Redirect to homepage",
+            "description": "Successful authentication, redirect to homepage",
+            "content": { }
+          },
+          "403": {
+            "description": "Invalid callback or negative response from identity provider",
             "content": { }
           },
           "404": {
-            "description": "Invalid callback",
+            "description": "OpenID Connect disabled",
+            "content": { }
+          },
+          "500": {
+            "description": "Other OpenID Connect error",
             "content": { }
           }
         }
